<resources>
    <string name="app_name">Tourney</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string-array name="jenisk">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
        <item>Dirahasiakan</item>
    </string-array>

    <string-array name="system">
        <item>Knock-Out</item>
        <item>Group Stage</item>
        <item>League</item>
    </string-array>

    <string-array name="peserta">
        <item>SD/Sederajat</item>
        <item>SMP/Sederajat</item>
        <item>SMA/Sederajat</item>
        <item>Umum</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
</resources>
